<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="bluetooth_off_alert">"Turn On Bluetooth to Allow \"iBobber\" to Connect to Accessories"</string>
    <string name="bluetooth_unsupported_alert">"Bluetooth LE is not Supported on this Device"</string>
    <string name="bluetooth_start_search">Search for iBobbers</string>
    <string name="bluetooth_stop_search">Stop Search</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_reminder_title">Reminder:</string>
    <string name="bluetooth_charge_reminder">Fully charge your iBobber at least once a month.</string>
    <string name="bobber_out_of_water">"iBobber out of water"</string>
    <string name="bobber_weak_sonar_signal">"Weak sonar signal"</string>
    <string name="demo_mode">"Demo"</string>
    <string name="bottom_menu_sonar">"Sonar"</string>
    <string name="bottom_menu_waterbed">"Waterbed"</string>
    <string name="bottom_menu_weather">"Weather"</string>
    <string name="bottom_menu_calendar">"Calendar"</string>
    <string name="bottom_menu_global_users">"Global Plotter"</string>
    <string name="bottom_menu_settings">"Settings"</string>
    <string name="bottom_menu_trip_log">"Trip Log"</string>
    <string name="button_done">"Done"</string>
    <string name="button_cancel">"Cancel"</string>
    <string name="button_done_uppercase">"DONE"</string>
    <string name="button_ok">"OK"</string>
    <string name="button_cancel_uppercase">"CANCEL"</string>
    <string name="button_register">"REGISTER"</string>
    <string name="button_update_user">"UPDATE USER"</string>
    <string name="button_skip">"Skip"</string>
    <string name="button_back">"Back"</string>
    <string name="button_next">"Next"</string>
    <string name="cast_command_title">"CAST iBOBBER"</string>
    <string name="cast_command_detail">"Press OK when ready to map."</string>
    <string name="calendar_rise">"Rise"</string>
    <string name="calendar_set">"Set"</string>
    <string name="calendar_today">"Today"</string>
    <string name="firmware_done_title">"Success"</string>
    <string name="firmware_done_detail">"Your iBobber is rebooting\nand will be available for\nuse in a few moments."</string>
    <string name="firmware_downloading">"Downloading..."</string>
    <string name="firmware_download_error_title">"Error"</string>
    <string name="firmware_download_error_detail">"An error occurred downloading\nthe firmware image.\nPlease ensure your device has\nan active internet connection\nand try again later."</string>
    <string name="firmware_prepare_error_title">"Error"</string>
    <string name="firmware_prepare_error_detail">"An error occurred preparing\nyour iBobber for the update.\nPlease reboot your device\nand reset your iBobber."</string>
    <string name="firmware_write_error_title">"Error"</string>
    <string name="firmware_write_error_detail">"An error occured while writing\nthe firmware image.\nPlease ensure your device and\niBobber are within two feet\nof each other and try again."</string>
    <string name="firmware_title">"Firmware Update"</string>
    <string name="firmware_prepare_title">"Ready, set..."</string>
    <string name="firmware_prepare_detail">"You are about to update your\niBobber's firmware.\n\nEnsure your iBobber is\ncharged before proceeding.\n\nDo not turn off your device or\nquit this app during the update."</string>
    <string name="firmware_writing">"Writing..."</string>
    <string name="fish_bass_lg_mth">"Bass-Lg Mth"</string>
    <string name="fish_bass_sm_mth">"Bass-Sm Mth"</string>
    <string name="fish_bass_rock">"Bass-Rock"</string>
    <string name="fish_bass_striped">"Bass-Striped"</string>
    <string name="fish_bluegill">"Bluegill"</string>
    <string name="fish_bullhead">"Bullhead"</string>
    <string name="fish_carp">"Carp"</string>
    <string name="fish_catfish">"Catfish"</string>
    <string name="fish_cord">"Cord"</string>
    <string name="fish_crappie">"Crappie"</string>
    <string name="fish_dorado">"Dorado"</string>
    <string name="fish_grouper">"Grouper"</string>
    <string name="fish_mackeral">"Mackeral"</string>
    <string name="fish_marlin">"Marlin"</string>
    <string name="fish_muskie">"Muskie"</string>
    <string name="fish_perch">"Perch"</string>
    <string name="fish_pike">"Pike"</string>
    <string name="fish_pompino">"Pompino"</string>
    <string name="fish_salmon_atlantic">"Salmon-Atlantic"</string>
    <string name="fish_salmon_copper">"Salmon-Copper"</string>
    <string name="fish_salmon_king">"Salmon-King"</string>
    <string name="fish_shark">"Shark"</string>
    <string name="fish_sturgeon">"Sturgeon"</string>
    <string name="fish_swordfish">"Swordfish"</string>
    <string name="fish_trout_brook">"Trout-Brook"</string>
    <string name="fish_trout_brown">"Trout-Brown"</string>
    <string name="fish_trout_cut_throat">"Trout-Cut Throat"</string>
    <string name="fish_trout_dolly">"Trout-Dolly"</string>
    <string name="fish_trout_steel">"Trout-Steel"</string>
    <string name="fish_walleye">"Walleye"</string>
    <string name="fish_sterlet">"Sterlet"</string>
    <string name="fish_beluga">"Beluga"</string>
    <string name="fish_sturgeon_starry">"Sturgeon-Starry"</string>
    <string name="fish_sturgeon_russian">"Sturgeon-Russian"</string>
    <string name="fish_river_eel">"River Eel"</string>
    <string name="fish_roach">"Roach"</string>
    <string name="fish_chub">"Chub"</string>
    <string name="fish_chevin">"Chevin"</string>
    <string name="fish_perlín">"Perlín"</string>
    <string name="fish_white_amur">"White Amur"</string>
    <string name="fish_asp">"Asp"</string>
    <string name="fish_tench">"Tench"</string>
    <string name="fish_common_nase">"Common Nase"</string>
    <string name="fish_parma_general">"Parma General"</string>
    <string name="fish_bream">"Bream"</string>
    <string name="fish_carp_crucian">"Carp-Crucian"</string>
    <string name="fish_carp_bighead">"Carp-Bighead"</string>
    <string name="fish_bullhead_brown">"Bullhead-Brown"</string>
    <string name="fish_grayling">"Grayling"</string>
    <string name="fish_sunfish">"Sunfish"</string>
    <string name="fish_zander">"Zander"</string>
    <string name="fish_bream_nembwe">"Bream - Nembwe"</string>
    <string name="fish_bream_three_spot">"Bream - Three Spot"</string>
    <string name="fish_bream_thin_face">"Bream - Thin Face"</string>
    <string name="fish_bream_pink_happy">"Bream - Pink Happy"</string>
    <string name="fish_bream_red_breast">"Bream - Red Breast"</string>
    <string name="fish_tigerfish">"Tigerfish"</string>
    <string name="fish_barbel">"Barbel"</string>
    <string name="fish_zh_fish1">""</string>
    <string name="fish_zh_fish2">""</string>
    <string name="fish_zh_fish3">""</string>
    <string name="fish_zh_fish4">""</string>
    <string name="fish_zh_fish5">""</string>
    <string name="fish_zh_fish6">""</string>
    <string name="fish_zh_fish7">""</string>
    <string name="fish_zh_fish8">""</string>
    <string name="fish_zh_fish9">""</string>
    <string name="fish_zh_fish10">""</string>
    <string name="fish_uk_fish1">""</string>
    <string name="fish_uk_fish2">""</string>
    <string name="fish_uk_fish3">""</string>
    <string name="fish_uk_fish4">""</string>
    <string name="fish_uk_fish5">""</string>
    <string name="fish_uk_fish6">""</string>
    <string name="fish_uk_fish7">""</string>
    <string name="fish_uk_fish8">""</string>
    <string name="fish_uk_fish9">""</string>
    <string name="fish_uk_fish10">""</string>
    <string name="fish_uk_fish11">""</string>
    <string name="fish_uk_fish12">""</string>
    <string name="fish_uk_fish13">""</string>
    <string name="fish_uk_fish14">""</string>
    <string name="fish_uk_fish15">""</string>
    <string name="fish_uk_fish16">""</string>
    <string name="fish_uk_fish17">""</string>
    <string name="fish_uk_fish18">""</string>
    <string name="fish_uk_fish19">""</string>
    <string name="fish_uk_fish20">""</string>
    <string name="fish_uk_fish21">""</string>
    <string name="fish_uk_fish22">""</string>
    <string name="fish_uk_fish23">""</string>
    <string name="fish_uk_fish24">""</string>
    <string name="fish_uk_fish25">""</string>
    <string name="fish_uk_fish26">""</string>
    <string name="fish_uk_fish27">""</string>
    <string name="fish_uk_fish28">""</string>
    <string name="fish_uk_fish29">""</string>
    <string name="fish_uk_fish30">""</string>
    <string name="fish_uk_fish31">""</string>
    <string name="fish_uk_fish32">""</string>
    <string name="fish_uk_fish33">""</string>
    <string name="fish_uk_fish34">""</string>
    <string name="fish_uk_fish35">""</string>
    <string name="fish_uk_fish36">""</string>
    <string name="fish_uk_fish37">""</string>
    <string name="fish_uk_fish38">""</string>
    <string name="fish_uk_fish39">""</string>
    <string name="fish_uk_fish40">""</string>
    <string name="fish_uk_fish41">""</string>
    <string name="fish_uk_fish42">""</string>
    <string name="fish_uk_fish43">""</string>
    <string name="fish_uk_fish44">""</string>
    <string name="fish_uk_fish45">""</string>
    <string name="fish_uk_fish46">""</string>
    <string name="fish_uk_fish47">""</string>
    <string name="fish_uk_fish48">""</string>
    <string name="fish_uk_fish49">""</string>
    <string name="fish_uk_fish50">""</string>
    <string name="fish_uk_fish51">""</string>
    <string name="uom_feet">"feet"</string>
    <string name="uom_meters">"meters"</string>
    <string name="uom_max">"max"</string>
    <string name="onboarding_get_started">"Let's get you set up to\nstart finding fish!"</string>
    <string name="reel_command_title">"REEL IN iBOBBER"</string>
    <string name="reel_command_detail">"Press OK when done mapping."</string>
    <string name="settings_app_tour">"App Tour"</string>
    <string name="settings_app_version">"App Version"</string>
    <string name="settings_firmware_version">"Firmware Version"</string>
    <string name="settings_bluetooth">"Bluetooth"</string>
    <string name="settings_favorite_fish">"Favorite Fish"</string>
    <string name="settings_personal">"Personal"</string>
    <string name="settings_bluetooth_sync">"Bluetooth Sync"</string>
    <string name="settings_required">"(Required)"</string>
    <string name="settings_metric">"Metric"</string>
    <string name="settings_imperial">"Imperial"</string>
    <string name="settings_email">"Email"</string>
    <string name="settings_nickname">"Nickname"</string>
    <string name="sun">"Sun"</string>
    <string name="mon">"Mon"</string>
    <string name="tue">"Tue"</string>
    <string name="wed">"Wed"</string>
    <string name="thu">"Thu"</string>
    <string name="fri">"Fri"</string>
    <string name="sat">"Sat"</string>
    <string name="create_account">Create Account</string>
    <string name="skip">Skip ></string>
    <string name="fname_star">First name *</string>
    <string name="lname_star">Last name *</string>
    <string name="email_address_star">Email address *</string>
    <string name="user_name_star">Username *</string>
    <string name="password_star">Password *</string>
    <string name="nothanks">No thanks</string>
    <string name="download_free">Download for Free!</string>
    <string name="netfish_ads_text1">Earn free gear with iBobber</string>
    <string name="netfish_ads_text2">Access over 1.6 million fishing spots</string>
    <string name="netfish_ads_text3">Know when and where to fish</string>
    <string name="record_your_latest_catch">Record your latest catch with</string>
    <string name="intro_finish">Finish</string>
    <string name="intro_finish_conclusion">That\'s it\!</string>
    <string name="intro_finish_salutation">Have fun fishing\!</string>
    <string name="intro_welcometo">Welcome to</string>
</resources>